Make sentence active [#158390713]

--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -30,7 +30,7 @@ The necessary configuration and supported restore scenarios differ depending on 
 BBR backs up external blobstores by copying blobs from live buckets to specified backup buckets.
 BBR uses the native copy functionality of your blobstore to transfer blobs between the live and backup buckets, without transferring the blobs to your BBR instance.
 
-For resiliency and safety, you should store your backup buckets and live buckets in different regions.
+For resiliency and safety, store your backup buckets and live buckets in different regions.
 
 ### <a id="enable-backup-and-restore-s3-unversioned"></a> Enable Backup and Restore of Your Unversioned S3-Compatible Blobstore
 
