Correct documentation about --debug flag
bbr --debug redirects stdout and stderr, not stdin and stdout

Paired with @alamages

--- a/logging.html.md.erb
+++ b/logging.html.md.erb
@@ -67,4 +67,4 @@ If more logging is needed, use the optional `--debug` flag to print the followin
 * Logs about the API requests made to the BOSH server
 * All commands executed on remote instances
 * All commands executed on local environment
-* Standard in and standard out streams for the backup and restore scripts when they are executed
+* Standard out and standard error streams for the backup and restore scripts when they are executed
