--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -5,11 +5,11 @@ owner: BBR
 
 This topic describes the configuration you need for your Cloud Foundry (CF) deployment to work with BOSH Backup and Restore (BBR).
 
-This topic assumes that you are using 
-[cf-deployment](https://github.com/cloudfoundry/cf-deployment) with ops files 
+This topic assumes that you are using
+[cf-deployment](https://github.com/cloudfoundry/cf-deployment) with ops files
 for your Cloud Foundry deployment.
 
-If you do not use ops files for customization, you can still customize your 
+If you do not use ops files for customization, you can still customize your
 Cloud Foundry to use BBR. Examine the contents of the ops files on this page,
 and use them as a guide to customize your deployment manifest directly.
 
@@ -30,8 +30,8 @@ and use them as a guide to customize your deployment manifest directly.
 
 ## <a id='configure-cf'></a>Supported CF Configurations
 
-To enable backup and restore for your `cf-deployment`, deploy it with the 
-[enable-backup-restore.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore.yml) ops file. This 
+To enable backup and restore for your `cf-deployment`, deploy it with the
+[enable-backup-restore.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore.yml) ops file. This
 enables BBR backup and restore for default CF components.
 
 To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files as shown in this table:
@@ -44,7 +44,7 @@ To enable BBR backup and restore for different configurations you must also use 
   </tr>
   <tr>
     <td>
-      A versioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-versioned">Backup and Restore with External Blobstores</a>.
+      A versioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-versioned">S3-Compatible Versioned Blobstores</a>.
     </td>
     <td>
       <code>use-s3-blobstore.yml</code>
@@ -56,7 +56,7 @@ To enable BBR backup and restore for different configurations you must also use 
   </tr>
   <tr>
     <td>
-      An un-versioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-unversioned">Backup and Restore with External Blobstores</a>.
+      An unversioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-unversioned">S3-Compatible Unversioned Blobstores</a>.
     </td>
     <td>
       <code>use-s3-blobstore.yml</code>
@@ -68,7 +68,7 @@ To enable BBR backup and restore for different configurations you must also use 
   </tr>
   <tr>
     <td>
-      An Azure blobstore with soft delete enabled. For instructions, see <a href="external-blobstores.html#azure">Backup and Restore with External Blobstores</a>.
+      An Azure blobstore with soft delete enabled. For instructions, see <a href="external-blobstores.html#azure">Azure Blobstores</a>.
     </td>
     <td>
       <code>use-azure-blobstore.yml</code>
@@ -76,6 +76,18 @@ To enable BBR backup and restore for different configurations you must also use 
     <td>
       <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-azure.yml">
         <code>enable-backup-restore-azure.yml</code></a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      A Google Cloud Storage external blobstore with versioning enabled. For instructions, see <a href="external-blobstores.html#gcs">Google Cloud Storage Blobstores</a>.
+    </td>
+    <td>
+      <code>use-gcs-blobstore-service-account.yml</code>
+    </td>
+    <td>
+      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-gcs.yml">
+        <code>enable-backup-restore-gcs.yml</code></a>
     </td>
   </tr>
   <tr>
