Update BBR release notes for 1.2.6

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,18 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.6
+
+**Release Date**: July 27, 2018
+
+#### Features
+
+None
+
+#### Bug Fixes
+
+* `bbr` is now able to talk to BOSH via a SOCKS5 proxy -- [story](https://www.pivotaltracker.com/n/projects/1662777/stories/157779432)
+
 ### <a id='1.2'></a> v1.2.4
 
 **Release Date**: June 29, 2018
