Update BBR release notes for 1.2.7

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,18 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.7
+
+**Release Date**: August 15, 2018
+
+#### Features
+
+None
+
+#### Bug Fixes
+
+* Fixes to make the `BOSH_ALL_PROXY` SSH+SOCKS5 proxy support more robust -- [story](https://www.pivotaltracker.com/story/show/159619865)
+
 ### <a id='1.2'></a> v1.2.6
 
 **Release Date**: July 27, 2018
