Update release notes for v1.2.7
...to also include features https://www.pivotaltracker.com/n/projects/1662777/stories/159111218 and https://www.pivotaltracker.com/n/projects/1662777/stories/159268069

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -15,7 +15,13 @@ None
 
 #### Bug Fixes
 
-* Fixes to make the `BOSH_ALL_PROXY` SSH+SOCKS5 proxy support more robust -- [story](https://www.pivotaltracker.com/story/show/159619865)
+* **Fixed** support for SSH+SOCKS5 proxy (`BOSH_ALL_PROXY`) to make it more robust -- [story](https://www.pivotaltracker.com/story/show/159619865).
+* **Improved** the help text for `bbr deployment` -- [story](https://www.pivotaltracker.com/n/projects/1662777/stories/159111218).
+* **Added** support for other `BOSH_*` variables ([story](https://www.pivotaltracker.com/n/projects/1662777/stories/159268069)):
+  - `BOSH_CA_CERT`
+  - `BOSH_DEPLOYMENT`
+  - `BOSH_CLIENT`
+  - and `BOSH_ENVIRONMENT`
 
 ### <a id='1.2'></a> v1.2.6
 
