--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -48,7 +48,7 @@ Follow these steps to verify that your BOSH Director is reachable and can be bac
 
 3. If the pre-check command fails, do the following: 
    + Run the command again adding the `--debug` flag to enable debug logs. 
-     For more information, see [Exit Codes and Logging](logging.html).
+     For more information, see [Logging](logging.html).
    + Make the fix suggested in the output and run the pre-backup check again.<br>
      For example, the command fails if the BOSH Director selected did not have the correct backup scripts
      or if the connection to the BOSH Director failed.
@@ -74,7 +74,7 @@ Follow these steps to verify that your BOSH Director is reachable and can be bac
 
 6. If the backup command fails, do the following: 
    + Run the command again adding the `--debug` flag to enable debug logs.<br>
-     For more information, see [Exit Codes and Logging](logging.html).
+     For more information, see [Logging](logging.html).
    + Follow the steps in [Recovering from a Failing Command](#recovering-from-failing-command).
 
 ## <a id='back-up-deployment'></a> Back Up a BOSH Deployment
@@ -123,7 +123,7 @@ Perform the following steps to check that your BOSH Director is reachable and ha
 
 3. If the pre-backup check command fails, do the following:
    + Run the command again adding the `--debug` flag to enable debug logs.<br>
-     For more information, see [Exit Codes and Logging](logging.html).
+     For more information, see [Logging](logging.html).
    + Make the fix suggested in the output and run the pre-backup check again.<br>
      For example, the deployment you selected might not have the correct backup scripts,
      or the connection to the BOSH Director failed.
@@ -161,7 +161,7 @@ Perform the following steps to check that your BOSH Director is reachable and ha
 
 6. If the backup command fails, do the following:
    + Run the command again adding the `--debug` flag to enable debug logs. 
-     For more information, see [Exit Codes and Logging](logging.html).
+     For more information, see [Logging](logging.html).
    + Follow the steps in [Recovering from a Failing Command](#recovering-from-failing-command).
 
 
@@ -173,7 +173,7 @@ If the backup fails for the  BOSH Director or deployment, follow these steps:
 1. Ensure the BOSH Director credentials are valid.
 1. If you are backing up a deployment, ensure the deployment you specify in the BBR command exists.
 1. Ensure that the jumpbox can reach the BOSH Director.
-1. Consult [Exit Codes and Logging](logging.html).
+1. Consult [Logging](logging.html).
 1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
    run the appropriate cleanup command. See [Clean Up after a Failed Backup](#manual-clean) below.
 1. If the backup artifact is corrupted discard the failing artifacts and rerun the backup.
@@ -224,40 +224,6 @@ Follow the steps below to use the BBR cleanup script to tidy up after a failed b
     --ca-cert bosh.ca.crt \
     backup-cleanup
     </pre>
-
-1. If the cleanup script fails, consult the following table to match the exit codes to an error message.
-
-    <table>
-      <tr>
-      <th>Value</th>
-      <th>Error</th>
-      </tr>
-      <tr>
-      <td>0</td>
-      <td>Success</td>
-      </tr>
-      <tr>
-      <td>1</td>
-      <td>General failure</td>
-      </tr>
-      <tr>
-      <td>8</td>
-      <td>The post-backup unlock failed. Your BOSH deployment or BOSH Director might be in a bad state and require attention.</td>
-      </tr>
-      <tr>
-      <td>16</td>
-      <td>The cleanup failed.
-          This is a non-fatal error indicating that the utility has been unable to clean up
-          open BOSH SSH connections to the deployment VMs.
-          Manual cleanup might be required to clear any hanging BOSH users and connections.</td>
-      </tr>
-    </table>
-
-    <br>
-    For more information about how to interpret the exit code,
-    see [Exit Codes](logging.html#exit-codes).
-
-
 
 ## <a id="good-practices"></a>Good Practices for Managing Your Backup Artifact
 
